# NetFM

./: .gitignore  README.md  eval.slurm  eval_community.slurm  features.slurm  pretrain.slurm  pyproject.toml
configs/: default.yaml
docs/: architecture.md
figures/data/: summary.csv  summary.md
figures/data/as733/: stats.json
figures/data/citeseer/: stats.json
figures/data/coauthor_cs/: stats.json
figures/data/cora/: stats.json
figures/data/dblp_snap/: stats.json
figures/data/euro_road/: stats.json
figures/data/facebook_ego/: stats.json
figures/data/lastfm_asia/: stats.json
figures/data/ogbn_arxiv/: stats.json
figures/data/ogbn_mag/: stats.json
figures/data/ogbn_proteins/: stats.json
figures/data/power_grid/: stats.json
figures/data/ppi/: stats.json
figures/data/pubmed/: stats.json
figures/data/twitch_en/: stats.json
figures/layouts/: cora_circular_ego_n150_d2.npz  cora_circular_ego_n150_d3.npz  cora_community_ego_n150_d2.npz  cora_community_ego_n150_d3.npz  cora_ego_n200_d3_s0.npz  cora_full_n2708_d2_s0.npz  cora_full_n2708_d3_s0.npz  cora_kamada_kawai_ego_n150_d2.npz  cora_kamada_kawai_ego_n150_d3.npz  cora_spectral_ego_n150_d2.npz  cora_spectral_ego_n150_d3.npz  cora_spring_ego_n150_d2.npz  cora_spring_ego_n150_d3.npz
outputs/: results_summary.md
outputs/testing/: final_leaderboard.txt
outputs/testing/20260419_015251_smoke/: args.json  (+2 more)
src/: analyze.py  baselines.py  data.py  eval_community.py  evaluate.py  features.py  finetune.py  model.py  plot_eval.py  plot_metrics.py  pretrain.py  tasks.py  testing_engine.py  visualize.py
(+24 files in other folders)
