[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "netfm"
version = "0.1.0"
description = "A Graph Foundation Model pre-trained on diverse networks for universal network science tasks."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Ali Dor"},
]

dependencies = [
    "torch>=2.0",
    "torch-geometric>=2.4",
    "networkx>=3.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "ogb>=1.3",
    "streamlit>=1.28",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["src"]
